moved fixVariableNames into Expression:nameForExporter so it could be changed dynamically and didn't bake names upon Variable creation.  workaround for interpreter 5.4's _PROMPT.  allowed the web interface cells to support mult-ret.  changed uids to be incremental so there are no overlaps from reused memory addresses.  added functionality for disabling controls while the server thinks.  fixed a bug in the cell indexOf lookup in the js.

--- a/server/standalone.css
+++ b/server/standalone.css
@@ -37,5 +37,5 @@ textarea, pre {
 .outputDiv {
 	margin-top: 5px;
 	border-right: 1px solid black;
-	padding: 10px;
+	/*padding: 10px;*/
 }
